stop tracking old files

--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,17 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+vtk/
+
+behaviour_group_level.py
+behaviour_subject_level.py
+check_EncodeProb_plots.py
+EncodeProb_normalize.py
+fix_old_pickles.py
+receptor_correlation.py
+receptor_density_AHBA.py
+receptor_density_autorad_zilles44.py
+spin_test_old.py
+spin_test.py
+variance_test.py
+null_variogram.py
